# climberPy

./: .gitignore  LICENSE  Mt._Baker.fit  README.md  Triple_Zoo_Hill_Climb_-_Return_Mercer_Island (1).gpx  Triple_Zoo_Hill_Climb_-_Return_Mercer_Island.gpx  blue_hills.gpx  classes.py  double_zoo_hill_activity.fit  identifiers.py  main.py  parsers.py  pyproject.toml  requirements.txt  setup.py  upper_lake_loop.fit  zoo_hill_climb_test.gpx
climberpy/: classes.py  identifiers.py  main.py  parsers.py  utils.py
climberpy/scripts/: script.py
flask_app/: __init__.py
tests/: test_calculate_distance.py  test_calculate_gradiant.py
